# manufacture

./: Cargo.toml  LICENSE  README.md  codeCodex.md
.devcontainer/: devcontainer.json
src/: ECS.rs  debug.json  errorManager.rs  index.rs  input.rs  jsonManager.rs  lib.rs  logic.rs  main.rs  manufacture.rs  player.rs  renderer.rs  system.rs  world.rs
src/ECS/: builders.rs  commands.rs  comp.rs  entity.rs  events.rs  fetch.rs  misc.rs  mod.rs  prefab.rs  prelude.rs  resource.rs  storage.rs  system.rs  vars.rs  world.rs
src/ECS/dispatcher/: mod.rs  stage.rs
src/data/: mod.rs  player.rs  world.rs
src/json/: debug.json  error.json
src/logic/: inventory.rs  mod.rs
src/manufacture/: init.rs  mod.rs  types.rs  utils.rs  vars.rs
src/manufacture/components/: mod.rs
src/manufacture/prefabs/: mod.rs
src/manufacture/resources/: event.rs  mod.rs  ui.rs  world.rs
src/manufacture/resources/ui/: mod.rs  specials.rs
src/manufacture/systems/: inventory.rs  mod.rs  renderer.rs  tileStuff.rs  tile_stuff.rs
src/manufacture/types/: cartesian.rs  mod.rs
src/manufacture/types/trees/: arena_tree.rs  mod.rs  node_tree.rs
src/renderer/: mod.rs  render_text.rs  render_util.rs  render_world.rs  text.rs  world.rs
src/renderer/render_util/: border.rs  lineDraw.rs  misc.rs  mod.rs  util_border.rs  util_lineDraw.rs
src/renderer/widgets/: mod.rs
src/sysManagers/: debug.rs  error.rs  input.rs  json.rs  mod.rs
src/system/: cache.rs  debug.rs  input.rs  json.rs  mod.rs  statics.rs  types.rs  vars.rs
src/system/data/: mod.rs  player.rs  world.rs
