[package]
name = "manufacture"
version = "0.1.0"
authors = ["Maxis Maximov Jr."]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manufacture_core = { git = "https://github.com/MaxisMaximov/manufacture-core.git" }
crossterm = "0.27.0"
rand = "0.8.5"
